Fixed minimum image size

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ ACME_EMAIL=admin@ldnmeals.com
 
 # SQLite DB file path (optional)
 DB_PATH=
+DAILY_UPLOAD_LIMIT=1000
 
 # App port (optional)
 PORT=3000
