--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -8,6 +8,8 @@ services:
       SESSION_COOKIE_SAME_SITE: ${SESSION_COOKIE_SAME_SITE:-lax}
       TRUST_PROXY: "true"
       DB_PATH: /app/data/data.db
+      DAILY_UPLOAD_LIMIT: ${DAILY_UPLOAD_LIMIT:-1000}
+      MAX_IMAGES_PER_POST: ${MAX_IMAGES_PER_POST:-10}
       R2_ENDPOINT: ${R2_ENDPOINT:-}
       R2_BUCKET: ${R2_BUCKET:-}
       R2_ACCESS_KEY_ID: ${R2_ACCESS_KEY_ID:-}
