--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ ACME_EMAIL=admin@ldnmeals.com
 # SQLite DB file path (optional)
 DB_PATH=
 DAILY_UPLOAD_LIMIT=1000
+MAX_IMAGES_PER_POST=10
 
 # App port (optional)
 PORT=3000
