--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,15 @@ SESSION_COOKIE_SECURE=false
 SESSION_COOKIE_SAME_SITE=lax
 TRUST_PROXY=false
 
+# Email verification for registration (required for new account creation)
+SMTP_HOST=smtp.your-mail-provider.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+SMTP_FROM=no-reply@ldnmeals.com
+REGISTRATION_CODE_TTL_MINUTES=10
+
 # Caddy production settings
 SITE_DOMAIN=ldnmeals.com
 ACME_EMAIL=admin@ldnmeals.com
@@ -21,6 +30,7 @@ ACME_EMAIL=admin@ldnmeals.com
 # SQLite DB file path (optional)
 DB_PATH=
 DAILY_UPLOAD_LIMIT=1000
+DAILY_REGISTRATION_LIMIT=200
 MAX_IMAGES_PER_POST=10
 
 # App port (optional)
