--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,10 @@ DB_PATH=
 DAILY_UPLOAD_LIMIT=1000
 DAILY_REGISTRATION_LIMIT=200
 MAX_IMAGES_PER_POST=10
+MAX_UPLOAD_FILE_SIZE_MB=10
+BODY_LIMIT=256kb
+AUTH_RATE_LIMIT_WINDOW_MINUTES=15
+AUTH_RATE_LIMIT_MAX_ATTEMPTS=25
 
 # App port (optional)
 PORT=3000
