--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -9,7 +9,15 @@ services:
       TRUST_PROXY: "true"
       DB_PATH: /app/data/data.db
       DAILY_UPLOAD_LIMIT: ${DAILY_UPLOAD_LIMIT:-1000}
+      DAILY_REGISTRATION_LIMIT: ${DAILY_REGISTRATION_LIMIT:-200}
       MAX_IMAGES_PER_POST: ${MAX_IMAGES_PER_POST:-10}
+      SMTP_HOST: ${SMTP_HOST:-}
+      SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_SECURE: ${SMTP_SECURE:-false}
+      SMTP_USER: ${SMTP_USER:-}
+      SMTP_PASS: ${SMTP_PASS:-}
+      SMTP_FROM: ${SMTP_FROM:-}
+      REGISTRATION_CODE_TTL_MINUTES: ${REGISTRATION_CODE_TTL_MINUTES:-10}
       R2_ENDPOINT: ${R2_ENDPOINT:-}
       R2_BUCKET: ${R2_BUCKET:-}
       R2_ACCESS_KEY_ID: ${R2_ACCESS_KEY_ID:-}
