Video posts support

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ DAILY_UPLOAD_LIMIT=1000
 DAILY_REGISTRATION_LIMIT=200
 MAX_IMAGES_PER_POST=10
 MAX_UPLOAD_FILE_SIZE_MB=10
+MAX_VIDEO_FILE_SIZE_MB=50
 BODY_LIMIT=256kb
 AUTH_RATE_LIMIT_WINDOW_MINUTES=15
 AUTH_RATE_LIMIT_MAX_ATTEMPTS=25
