--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -11,6 +11,7 @@ services:
       DAILY_UPLOAD_LIMIT: ${DAILY_UPLOAD_LIMIT:-1000}
       DAILY_REGISTRATION_LIMIT: ${DAILY_REGISTRATION_LIMIT:-200}
       MAX_IMAGES_PER_POST: ${MAX_IMAGES_PER_POST:-10}
+      MAX_VIDEO_FILE_SIZE_MB: ${MAX_VIDEO_FILE_SIZE_MB:-50}
       SMTP_HOST: ${SMTP_HOST:-}
       SMTP_PORT: ${SMTP_PORT:-587}
       SMTP_SECURE: ${SMTP_SECURE:-false}
