--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,9 @@ DAILY_REGISTRATION_LIMIT=200
 MAX_IMAGES_PER_POST=10
 MAX_UPLOAD_FILE_SIZE_MB=10
 MAX_VIDEO_FILE_SIZE_MB=50
+ENABLE_SERVER_VIDEO_PROCESSING=false
+ENABLE_VIDEO_TRANSCODE=false
+FFMPEG_PATH=ffmpeg
 BODY_LIMIT=256kb
 AUTH_RATE_LIMIT_WINDOW_MINUTES=15
 AUTH_RATE_LIMIT_MAX_ATTEMPTS=25
