--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -12,6 +12,9 @@ services:
       DAILY_REGISTRATION_LIMIT: ${DAILY_REGISTRATION_LIMIT:-200}
       MAX_IMAGES_PER_POST: ${MAX_IMAGES_PER_POST:-10}
       MAX_VIDEO_FILE_SIZE_MB: ${MAX_VIDEO_FILE_SIZE_MB:-50}
+      ENABLE_SERVER_VIDEO_PROCESSING: ${ENABLE_SERVER_VIDEO_PROCESSING:-false}
+      ENABLE_VIDEO_TRANSCODE: ${ENABLE_VIDEO_TRANSCODE:-false}
+      FFMPEG_PATH: ${FFMPEG_PATH:-ffmpeg}
       SMTP_HOST: ${SMTP_HOST:-}
       SMTP_PORT: ${SMTP_PORT:-587}
       SMTP_SECURE: ${SMTP_SECURE:-false}
