HEIC Format accept

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MAX_IMAGES_PER_POST: ${MAX_IMAGES_PER_POST:-10}
       MAX_VIDEO_FILE_SIZE_MB: ${MAX_VIDEO_FILE_SIZE_MB:-50}
       ENABLE_SERVER_VIDEO_PROCESSING: ${ENABLE_SERVER_VIDEO_PROCESSING:-false}
-      ENABLE_VIDEO_TRANSCODE: ${ENABLE_VIDEO_TRANSCODE:-false}
+      ENABLE_VIDEO_TRANSCODE: ${ENABLE_VIDEO_TRANSCODE:-true}
       FFMPEG_PATH: ${FFMPEG_PATH:-ffmpeg}
       SMTP_HOST: ${SMTP_HOST:-}
       SMTP_PORT: ${SMTP_PORT:-587}
