--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,15 @@ MAX_VIDEO_FILE_SIZE_MB=50
 ENABLE_SERVER_VIDEO_PROCESSING=false
 ENABLE_VIDEO_TRANSCODE=true
 FFMPEG_PATH=ffmpeg
+GHOSTSCRIPT_PATH=gs
+MAX_TOOL_PDF_FILES=10
+MAX_TOOL_PDF_FILE_SIZE_MB=20
+MAX_TOOL_PDF_TOTAL_INPUT_MB=80
+TOOL_RUN_TIMEOUT_SECONDS=45
+TOOL_RATE_LIMIT_WINDOW_SECONDS=60
+TOOL_RATE_LIMIT_MAX_RUNS=6
+TOOL_MAX_CONCURRENT_RUNS=2
+TOOL_MAX_CONCURRENT_RUNS_PER_TOOL=1
 BODY_LIMIT=256kb
 AUTH_RATE_LIMIT_WINDOW_MINUTES=15
 AUTH_RATE_LIMIT_MAX_ATTEMPTS=25
