PDF Ghostscript included

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,15 @@ services:
       ENABLE_SERVER_VIDEO_PROCESSING: ${ENABLE_SERVER_VIDEO_PROCESSING:-false}
       ENABLE_VIDEO_TRANSCODE: ${ENABLE_VIDEO_TRANSCODE:-true}
       FFMPEG_PATH: ${FFMPEG_PATH:-ffmpeg}
+      GHOSTSCRIPT_PATH: ${GHOSTSCRIPT_PATH:-gs}
+      MAX_TOOL_PDF_FILES: ${MAX_TOOL_PDF_FILES:-10}
+      MAX_TOOL_PDF_FILE_SIZE_MB: ${MAX_TOOL_PDF_FILE_SIZE_MB:-20}
+      MAX_TOOL_PDF_TOTAL_INPUT_MB: ${MAX_TOOL_PDF_TOTAL_INPUT_MB:-80}
+      TOOL_RUN_TIMEOUT_SECONDS: ${TOOL_RUN_TIMEOUT_SECONDS:-45}
+      TOOL_RATE_LIMIT_WINDOW_SECONDS: ${TOOL_RATE_LIMIT_WINDOW_SECONDS:-60}
+      TOOL_RATE_LIMIT_MAX_RUNS: ${TOOL_RATE_LIMIT_MAX_RUNS:-6}
+      TOOL_MAX_CONCURRENT_RUNS: ${TOOL_MAX_CONCURRENT_RUNS:-2}
+      TOOL_MAX_CONCURRENT_RUNS_PER_TOOL: ${TOOL_MAX_CONCURRENT_RUNS_PER_TOOL:-1}
       SMTP_HOST: ${SMTP_HOST:-}
       SMTP_PORT: ${SMTP_PORT:-587}
       SMTP_SECURE: ${SMTP_SECURE:-false}
