Add safety features

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ R2_SECRET_ACCESS_KEY=your-secret-key
 R2_PUBLIC_BASE_URL=https://<bucket>.<accountid>.r2.cloudflarestorage.com
 
 # Session secret (use a strong random value)
+NODE_ENV=production
 SESSION_SECRET=change_this_to_a_long_random_secret
 SESSION_COOKIE_SECURE=false
 SESSION_COOKIE_SAME_SITE=lax
