--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,9 @@ R2_ACCESS_KEY_ID=AKIAEXAMPLE
 R2_SECRET_ACCESS_KEY=your-secret-key
 R2_PUBLIC_BASE_URL=https://<bucket>.<accountid>.r2.cloudflarestorage.com
 
+# Runtime mode (`development` for local dev; production compose sets this automatically)
+NODE_ENV=development
 # Session secret (use a strong random value)
-NODE_ENV=production
 SESSION_SECRET=change_this_to_a_long_random_secret
 SESSION_COOKIE_SECURE=false
 SESSION_COOKIE_SAME_SITE=lax
